@@ -3,12 +3,10 @@
 Paint manages terminal colors and effects for you. It combines the strengths of *term-ansicolor*, *rainbow* and other similar projects into a simple to use, however still flexible terminal colorization gem with no core extensions by default.
 
 == Features
-
 * No string extensions (suitable for library development)
 * Supports setting 256 colors (for capable terminals)
 * Supports setting any effects (although most terminals won't support it)
 * Simple to use
-* Custom shortcuts can be defined and flexibly mixed in
 * Fall-back modes for non-256-color terminals (<tt>Paint.mode</tt>), supported modes:
   * 256 colors
   * 16 colors (only ansi colors, combined with bright effect)
@@ -16,12 +14,7 @@ Paint manages terminal colors and effects for you. It combines the strengths of 
   * 0 colors (deactivate)
 
 == Setup
-
-Install with:
-
-  gem install paint
-
-Or add to Gemfile:
+Add to Gemfile:
 
   gem 'paint'
 
@@ -32,7 +25,6 @@ In Ruby do:
   require 'paint'
 
 == Usage
-
 The only method you need to know to get started is: <tt>Paint.[]</tt>
 
 The first argument given to <tt>Paint.[]</tt> is the string to colorize (if the object is not a string, <tt>to_s</tt> will be called on it). The other arguments describe how to modify/colorize the string. Let's learn by example:
@@ -57,11 +49,9 @@ When you pass multiple colors, the first one is taken as foreground color and th
 You can find more examples in the specs.
 
 == Windows Support
-
 For ANSI support in Windows OS, you can use {ansicon}[https://github.com/adoxa/ansicon] or {ConEmu}[http://code.google.com/p/conemu-maximus5/].
 
 == More details about terminal colors and effects
-
 Terminal colors/effects are set by {ansi escape sequences}[http://en.wikipedia.org/wiki/ANSI_escape_code]. These are strings that look like this: <tt>\e[X;X;X;X;X]m</tt> where X are integers with some meaning. For example, 0 means reset, 31 means red foreground and 41 red background. When you tell Paint to use one of the eight ansi base colors as foreground color, it just inserts a number between 30 and 37 in the sequence. The following colors are available:
 
   :black, :red, :green, :yellow, :blue, :magenta, :cyan, :white, (:default)
@@ -73,7 +63,6 @@ Through special sequences it's also possible to set 256-colors, instead of 8, wh
 When using the <tt>Paint.[]</tt> method, Paint wraps the given string between the calculated escape sequence and an reset sequence (<tt>"\e[0m"</tt>). You can get the raw escape sequence by using the <tt>Paint.color</tt> method.
 
 === Effects
-
 Also see {en.wikipedia.org/wiki/ANSI_escape_code}[http://en.wikipedia.org/wiki/ANSI_escape_code]:
 
 ==== Often supported
@@ -109,7 +98,6 @@ Also see {en.wikipedia.org/wiki/ANSI_escape_code}[http://en.wikipedia.org/wiki/A
   55) :overline_off
 
 == Paint.mode
-
 You can choose between four ways to use <tt>Paint.[]</tt> by setting <tt>Paint.mode</tt> to one of the following:
 * 256:   full support
 * 16:    don't use 256 colors, but the ansi eight ones (combined with bright effect)
@@ -118,48 +106,7 @@ You can choose between four ways to use <tt>Paint.[]</tt> by setting <tt>Paint.m
 
 Paint tries to automatically detect the proper value, please open an issue if <tt>Paint.detect_mode</tt> yields a wrong value for you.
 
-== Advanced Usage: Shortcuts
-
-Now for the fancy part: You can create color shortcuts for your gems and scripts! Note: You don't have to use this feature (and only stick to <tt>Paint.[]</tt> instead) ;)
-
-It's easy: Just setup a hash of symbol keys and escape string values at: <tt>Paint::SHORTCUTS[:your_namespace]</tt>. They are stored directly as escape sequences for performance reasons (this also means, you need different namespaces for different <tt>Paint.mode</tt>s). Example:
-
-  Paint::SHORTCUTS[:example] = {
-    :white => Paint.color(:black),
-    :red => Paint.color(:red, :bright),
-    :title => Paint.color(:underline),
-  }
-
-The methods become "rubymagically" available in a <tt>Paint</tt> child model:
-
-  Paint::Example.red 'Ruby' # => "\e[31;1mRuby\e[0m"
-  Paint::Example.white      # => "\e[37m"
-
-As you can see, the helper methods look useful and can take either one (wrap string) or none (only color) arguments ...but they aren't really <em>short</em> yet.
-
-Fortunately, you can include them:
-
-  include Paint::Example
-  red # => "\e[31;1m"
-  white 'Ruby' # => "\e[30m"
-
-All shortcuts, defined in your shortcut namespace at this time, are now (privately) available in your current namespace (without using a method_missing implementation).
-
-Furthermore, there are two variations of this approach:
-
-  include Paint::Example::String
-  "Ruby".title # => "\e[4mRuby\e[0m"
-  5.red # => "\e[31;1m5\e[0m"
-
-In this case, <tt>self</tt> will be converted to a string and wrapped with the specific color code. Note, that the helper methods doesn't take any arguments when using this inclusion method.
-
-The third way allows you to get a single color helper method to avoid cluttering namespaces:
-
-  include Paint::Example::Prefix::ExampleName
-  "Ruby".example_name(:red) # => "\e[31;1mRuby\e[0m"
-
 === Utilities
-
 There are some supporting methods available. You can get a <tt>p</tt> like alternative for calling <tt>puts Paint.[]</tt>:
 
   require 'paint/pa'
@@ -168,6 +115,9 @@ There are some supporting methods available. You can get a <tt>p</tt> like alter
 Another helper method is <tt>Paint.unpaint</tt>, which removes any ansi colors:
 
   Paint.unpaint( Paint['Ruby', :red, :bright] ).should == 'Ruby'
+
+== Advanced Usage: Shortcuts
+There is an extension gem available that allows you to define custom color shortcuts. See {SHORTCUTS.rdoc}[https://github.com/janlelis/paint/blob/master/SHORTCUTS.rdoc] for more information.
 
 == J-_-L
 
