@@ -1,0 +1,3 @@
+module Paint
+  SHORTCUTS_VERSION = '1.0.0.pre'
+end
