@@ -1,4 +1,5 @@
 === 1.0.0 (master)
+* Seperate Paint::SHORTCUTS into extra gem
 * Drop support for Ruby 1 (inoffically still support 1.9.3)
 
 === 0.9.0
